--- a/.github/workflows/pretext-cli.yml
+++ b/.github/workflows/pretext-cli.yml
@@ -83,7 +83,7 @@ jobs:
     deploy-ghpages:
         runs-on: ubuntu-latest
         needs: build
-        if: vars.PTX_ENABLE_DEPLOY_GHPAGES == 'yes' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+        if: github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         permissions:
             contents: read
             pages: write
